<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PUA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="register_button">REGISTER NOW</string>
    <string name="login_link">Already a member? <u>Click here to login</u></string>
    <string name="login_button">LOGIN</string>
    <string name="forgot_password_link">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    
    <string name="title_activity_opening">OpeningActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="select_picture">Select your photo :</string>
    <string name="confirm_picture">Confirm</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string-array name="security_question">
        <item>What is your child favourite?</item>
        <item>What language you know?</item>
        <item>Where is your dream place?</item>
    </string-array>
    
    <string name="gcm_send_message">GCM_SEND_MESSAGE</string>
    <string name="token_error_message">TOKEN_ERROR_MESSAGE!</string>
    
    <string name="details">detail ............ etc</string>
    <string name="title_info">Student Info</string>
    <string name="info1">Name :</string>
    <string name="info2">I/C No :</string>
    <string name="info3">Class :</string>
    <string name="title_dicipline">Dicipline Record</string>
    <string name="dicipline1">Type :</string>
    <string name="dicipline2">Case :</string>
    <string name="title_result">Results</string>
    
</resources>
