<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <include layout="@layout/toolbar" />
    
    <TextView 
        android:id="@+id/tvSelectPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/select_picture"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:contentDescription="@string/app_name"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:clickable="true"
        android:src="@drawable/no_user_logo" />
    
    <Button 
        android:id="@+id/bConfirmPic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:background="#2BB673"
        android:textColor="#FFF"
        android:text="@string/confirm_picture"/>

</RelativeLayout>
