<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_info"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:text="@string/info1" />

            <TextView
                android:id="@+id/student_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:text="@string/info2" />

            <TextView
                android:id="@+id/student_ic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:text="@string/info3" />

            <TextView
                android:id="@+id/student_class"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingTop="30dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dicipline"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:text="@string/dicipline1" />

            <TextView
                android:id="@+id/discipline_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:text="@string/dicipline2" />

            <TextView
                android:id="@+id/dicipline_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details" />
            
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingTop="30dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_result"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="1" >

            <Spinner
                android:layout_weight="0.5"
                android:id="@+id/exam_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

			<Spinner
                android:layout_weight="0.5"
                android:id="@+id/exam_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
		
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:weightSum="1"	>
		
            <ListView 
                android:id="@+id/lvSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
            	android:dividerHeight="0dp"
            	android:clickable="false"
        		android:divider="@android:color/transparent"/>

            <ListView 
                android:id="@+id/lvGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
            	android:dividerHeight="0dp"
            	android:clickable="false"
        		android:divider="@android:color/transparent"/>
     
        </LinearLayout>

    </LinearLayout>

</ScrollView>
