<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   	<include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/lblForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:padding="10dp"
        android:text="@string/forgot_password_link"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="185dp"
        android:background="#2BB673"
        android:text="@string/login_button"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblForgotPassword"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_marginBottom="19dp"
        android:ems="13"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_marginBottom="70dp"
        android:text="@string/username"
        android:textColor="#000000"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_alignRight="@+id/lblUsername"
        android:text="@string/password"
        android:textColor="#000000"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/lblCurrContactNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblUsername"
        android:layout_alignTop="@+id/lblUsername"
        android:layout_marginTop="24dp"
        android:hint="Contact Number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText,RtlHardcoded" />

</RelativeLayout>